--- a/api/templates/basics.html
+++ b/api/templates/basics.html
@@ -1,63 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/header.css" />
-    <link rel="stylesheet" href="./css/basics.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Montserrat:wght@600;700&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <div class="linkblock">
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Список конспектов{% endblock %}
+
+{% block content %}
+<header>
+    <div class="linkblock">
         <a href="./index.html" class="">Python и разработка</a> /
         <a href="">Python-основы</a>
-      </div>
-      <button class="enter">Выйти</button>
-    </header>
-    <main>
-      <img src="./assets/pytBasics.svg" alt="" / style="width: 100px; height:
-      120px;">
-      <h1 class="pageTitle">Python-основы</h1>
+    </div>
+    <button class="enter">Выйти</button>
+</header>
+<main>
+    <img src="./assets/pytBasics.svg" alt="" / style="width: 100px; height:
+    120px;">
+    <h1 class="pageTitle">Python-основы</h1>
 
-      <div class="searchBasics">
-        <input type="text" placeholder="Поиск..." />
+    <div class="searchBasics">
+        <input type="text" placeholder="Поиск..."/>
         <button class="searchBtn">Найти</button>
-      </div>
-      <hr />
-      <a href="./introduction.html">
+    </div>
+    <hr/>
+    <a href="./introduction.html">
         <div class="theme">
-          <div class="leaftTheme">
-            <img src="./assets/1basics.svg" alt="" />
-            Введение в написание программ
-          </div>
+            <div class="leaftTheme">
+                <img src="./assets/1basics.svg" alt=""/>
+                Введение в написание программ
+            </div>
         </div>
-      </a>
+    </a>
 
-      <div class="theme">
+    <div class="theme">
         <div class="leaftTheme">
-          <img src="./assets/2basics.svg" alt="" />
-          <p>Переменные и типы данных</p>
+            <img src="./assets/2basics.svg" alt=""/>
+            <p>Переменные и типы данных</p>
         </div>
-      </div>
+    </div>
 
-      <div class="theme">
+    <div class="theme">
         <div class="leaftTheme">
-          <img src="./assets/3basics.svg" alt="" />
-          <p>Арифметические операции с числами</p>
+            <img src="./assets/3basics.svg" alt=""/>
+            <p>Арифметические операции с числами</p>
         </div>
         <div class="lock">
-          <img src="./assets/lock.svg" alt="" />
+            <img src="./assets/lock.svg" alt=""/>
         </div>
-      </div>
-    </main>
-  </body>
-</html>
+    </div>
+</main>
+{% endblock %}
