--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -17,12 +17,12 @@
 
 <main>
     <div class="mainInfo">
-        <img src="./assets/pitonGlav.svg" alt=""/>
+        <img src="{% static '/assets/pitonGlav.svg' %}" alt=""/>
         <hr/>
 
         <div class="discriptionMain">
             <div class="captionMain">
-                <img src="./assets/iconGlav.svg" alt="" / >
+                <img src="{% static '/assets/iconGlav.svg' %}" alt="" / >
                 <h1 class="pageTitle">Python и разработка</h1>
             </div>
             <div class="blockDesc">
