--- a/api/templates/introduction.html
+++ b/api/templates/introduction.html
@@ -4,7 +4,7 @@
 {% block title %}Конспект{% endblock %}
 
 {% block content %}
-<script src="js/colorIntrod.js"></script>
+<script src="{% static 'js/colorIntrod.js' %}"></script>
 <header>
     <div class="linkblock">
         <a href="./index.html" class="">Python и разработка</a> /
@@ -15,7 +15,7 @@
     <button class="enter">Выйти</button>
 </header>
 <main class="mainSize">
-    <img src="./assets/1basics.svg" alt="" / style="width: 100px; height:
+    <img src="{% static '/assets/1basics.svg %}" alt="" / style="width: 100px; height:
     120px;">
     <h1 class="pageTitle">Введение в написание программ</h1>
 
@@ -92,23 +92,23 @@
 
     <div class="lessons_designation">
         <div class="nav_lesson">
-            <img src="./assets/2basics.svg" alt=""/>
+            <img src="{% static '/assets/2basics.svg' %}" alt=""/>
             <p>Урок 2. Переменные</p>
         </div>
 
         <div class="nav_lesson">
-            <img src="./assets/2basics.svg" alt=""/>
+            <img src="{% static '/assets/2basics.svg' %}" alt=""/>
             <p>Урок 2. Переменные</p>
         </div>
 
         <div class="nav_lesson">
-            <img src="./assets/2basics.svg" alt=""/>
+            <img src="{% static '/assets/2basics.svg' %}" alt=""/>
             <p>Урок 2. Переменные</p>
         </div>
     </div>
 
     <section class="codeExample">
-        <img src="./assets/codeEx.png" alt=""/>
+        <img src="{% static '/assets/codeEx.png' %}" alt=""/>
     </section>
     <button type="submit" class="btnQuestion">Оставить вопрос</button>
     <div class="sendRequestBlock">
@@ -120,9 +120,9 @@
                 rows="10"
                 class="inputQuestion"
         ></textarea>
-        <img src="./assets/iconSend.svg" alt="" / style="width: 20px; height:
+        <img src="{% static '/assets/iconSend.svg' %} alt="" / style="width: 20px; height:
         16px;" class="iconSend">
     </div>
 </main>
-<script src="./js/colorIntrod.js"></script>
+<script src="{% static '/js/colorIntrod.js' %}"></script>
 {% endblock %}
