--- a/api/templates/basics.html
+++ b/api/templates/basics.html
@@ -12,7 +12,7 @@
     <button class="enter">Выйти</button>
 </header>
 <main>
-    <img src="./assets/pytBasics.svg" alt="" / style="width: 100px; height:
+    <img src="{% static '/assets/pytBasics.svg' %}" alt="" / style="width: 100px; height:
     120px;">
     <h1 class="pageTitle">Python-основы</h1>
 
@@ -24,7 +24,7 @@
     <a href="./introduction.html">
         <div class="theme">
             <div class="leaftTheme">
-                <img src="./assets/1basics.svg" alt=""/>
+                <img src="{% static '/assets/1basics.svg' %}" alt=""/>
                 Введение в написание программ
             </div>
         </div>
@@ -32,7 +32,7 @@
 
     <div class="theme">
         <div class="leaftTheme">
-            <img src="./assets/2basics.svg" alt=""/>
+            <img src="{% static '/assets/2basics.svg' %}" alt=""/>
             <p>Переменные и типы данных</p>
         </div>
     </div>
