--- a/api/templates/constructor.html
+++ b/api/templates/constructor.html
@@ -38,6 +38,6 @@
         <!-- <button onclick=" saveInputs()">Сохранить Input</button> -->
     </div>
 </main>
-<script src="./js/constructor.js"></script>
-<script src="./js/colorIntrod.js"></script>
+<script src="{% static '/js/constructor.js' %}"></script>
+<script src="{% static '/js/colorIntrod.js' %}"></script>
 {% endblock %}
