--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -7,14 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="{% static 'css/reset.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/header.css' %}"/>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+{#    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>#}
+{#    <link rel="stylesheet" href="{% static 'css/basics.css' %}"/>#}
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Montserrat:wght@600;700&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Montserrat:wght@600;700&display=swap"
+      rel="stylesheet"
     />
     <title>{% block title %}{% endblock %}</title>
+    {% block style %}{% endblock %}
 </head>
 <body>
 {% block content %}
