--- a/api/templates/introduction.html
+++ b/api/templates/introduction.html
@@ -3,6 +3,11 @@
 
 {% block title %}Конспект{% endblock %}
 
+{% block style %}
+    <link rel="stylesheet" href="{% static 'css/basics.css' %}"/>
+    <link rel="stylesheet" href="{% static '/css/introduction.css"' %}" />
+{% endblock %}
+
 {% block content %}
 <script src="{% static 'js/colorIntrod.js' %}"></script>
 <header>
