--- a/api/templates/constructor.html
+++ b/api/templates/constructor.html
@@ -3,6 +3,12 @@
 
 {% block title %}Конструктор{% endblock %}
 
+{% block style %}
+    <link rel="stylesheet" href="{% static 'css/basics.css' %}"/>
+    <link rel="stylesheet" href="{% static '/css/introduction.css"' %}" />
+    <link rel="stylesheet" href="{% static '/css/constructor.css' %}" />
+{% endblock %}
+
 {% block content %}
 <header>
     <div class="linkblock">
